# RAGspert

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.pgvector  README.md  compose.yaml  example.env  main.py  pyproject.toml
fastapistarter/: .dockerignore  README.md  example.env  pyproject.toml
fastapistarter/src/: config.py  load_app.py
fastapistarter/src/crud/: user.py
fastapistarter/src/database/: db_settings.py
fastapistarter/src/database/db/: development.db
fastapistarter/src/routes/: base.py
postgres_cmd/: 01-init.sql  init.sql
src/: config.py  load_app.py
src/agent/: rag.py
src/crud/: agent.py
src/database/: __init__.py  db_settings.py
src/database/models/: agent_sitepage.py  user.py
src/routes/: agent.py  base.py  user.py
src/schemas/: user.py
src/shared/: templates.py
src/static/css/: style.css
src/templates/: agent.html  ask.html  base.html  crawl.html  info.html
src/utils/: app_logger.py  chunking.py  crawl_config.py  crawl_site.py  crawl_status.py  decorators.py  helpers_crawl.py  process_doc.py  ratelimiter.py  text_embedder.py
src/utils/llm/: gemini_cl.py
