[project]
name = "fastapistarter"
version = "0.7.0"
description = "Your async FastAPI starter Kit; without the fluff!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.118.2",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.37.0",
]
